# hackathon_5

./: .env.example  .gitignore  PROMPT.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: .mcp.json  CLAUDE.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  db.py  fairness_blocklist.yaml  logging.py  security.py
backend/app/models/: db_models.py  schemas.py
backend/app/routes/: ai.py  applications.py  audit.py  citizen.py  fairness.py  health.py  policy.py  review.py
backend/app/services/: ai_stub.py  audit.py  fairness.py  minimizer.py  policy.py  pseudonymizer.py  router.py
backend/tests/: conftest.py  test_applications.py  test_fairness.py  test_pseudonymizer.py
db/: init.sql
docs/: architectuur.md  audit-database.md  bpmn.md  endpoints.md  installatie.md  n8n-workflow.md  plan.md  prompt-charter.md
frontend/: .dockerignore  Dockerfile  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: JsonView.tsx  Layout.tsx  StatusBadge.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  table.tsx  tabs.tsx  textarea.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
frontend/src/pages/: AuditLogPage.tsx  IntakePage.tsx  ReviewerDashboardPage.tsx
n8n/: README.md
n8n/workflows/: wmo.json
scripts/: test-cases.sh
